fix: slide height overflow, cms-block width overflow

--- a/src/Resources/app/storefront/src/scss/_elysium-block.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-block.scss
@@ -8,5 +8,8 @@
 }
 
 .blur-elysium-block {
+    --block-columns: minmax(0, 1fr);
+    grid-template-columns: var(--block-columns);
     padding: 0;
+
 }
