--- a/src/Resources/app/storefront/src/scss/_elysium-slide.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-slide.scss
@@ -66,7 +66,6 @@
     align-items: var(--slide-align-items);
     justify-content: var(--slide-justify-content);
     max-height: var(--slide-max-height);
-    overflow: hidden;
 }
 
 .blur-elysium-slide-cover-picture {
